[project]
name = "mercari-mcp"
version = "0.1.0"
description = "A FastMCP server to search Mercari Japan."
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

dependencies = [
    "fastmcp",
    "pydantic",
    # Dependencies for custom mercari library
    "asn1crypto",
    "cryptography",
    "requests",
]

[tool.setuptools]
py-modules = ["server", "check_server"]
